fix settings tabs on mobile, update follow request badge

--- a/src/components/tab_switcher/tab_switcher.scss
+++ b/src/components/tab_switcher/tab_switcher.scss
@@ -92,7 +92,7 @@
         flex-direction: column;
 
         @media all and (max-width: 800px) {
-          min-width: 1em;
+          min-width: 4em;
         }
 
         &:not(.active)::after {
